--- a/experiment/remote/templates/base/index.html
+++ b/experiment/remote/templates/base/index.html
@@ -12,6 +12,7 @@
   <h2>Controls</h2>
   <button onclick="sendCommand('goodmonkey')">Good Monkey!</button>
   <button onclick="sendCommand('quit')">Stop Task</button>
+  <p id="behaviour_summary"></p>
   <p id="response"></p>
 
   <script>
@@ -24,6 +25,19 @@
     socket.on('response', function(data) {
         document.getElementById("response").innerText = data.message;
     });
+
+    function fetchBehaviour() {
+      fetch('/behaviour_summary')
+        .then(response=>response.json())
+        .then(data => {
+          document.getElementById("behaviour_summary").textContent = JSON.stringify(data, null, 2)
+        })
+    }
+    // socket.on('trial_end', function(data) {
+    //   fetchBehaviour()
+    // })
+    setInterval(fetchBehaviour, 1000)
+    fetchBehaviour()
   </script>
 </body>
 </html>
