--- a/experiment/remote/templates/base/index.html
+++ b/experiment/remote/templates/base/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Experiment Controller</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
+    <script src="{{ url_for('static', filename='socketio.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='plotly.min.js') }}"></script>
 </head>
 <body>
   <h1>Experiment Controller</h1>
@@ -14,30 +15,6 @@
   <button onclick="sendCommand('quit')">Stop Task</button>
   <p id="behaviour_summary"></p>
   <p id="response"></p>
-
-  <script>
-    var socket = io.connect("http://" + document.domain + ":" + location.port);
-
-    function sendCommand(action) {
-        socket.emit('command', { action: action });
-    }
-
-    socket.on('response', function(data) {
-        document.getElementById("response").innerText = data.message;
-    });
-
-    function fetchBehaviour() {
-      fetch('/behaviour_summary')
-        .then(response=>response.json())
-        .then(data => {
-          document.getElementById("behaviour_summary").textContent = JSON.stringify(data, null, 2)
-        })
-    }
-    // socket.on('trial_end', function(data) {
-    //   fetchBehaviour()
-    // })
-    setInterval(fetchBehaviour, 1000)
-    fetchBehaviour()
-  </script>
 </body>
+<script src="{{ url_for('static', filename='main.js') }}"></script>
 </html>
