--- a/experiment/remote/templates/base/index.html
+++ b/experiment/remote/templates/base/index.html
@@ -11,8 +11,8 @@
   <h1>Experiment Controller</h1>
   <img src="/screen" width="640">
   <h2>Controls</h2>
-  <button onclick="sendCommand('goodmonkey')">Good Monkey!</button>
-  <button onclick="sendCommand('quit')">Stop Task</button>
+  <button onclick="sendCommand({'do': 'reward'})">Good Monkey!</button>
+  <button onclick="sendCommand({'do': 'quit'})">Stop Task</button>
   <p id="behaviour_summary"></p>
   <p id="response"></p>
 </body>
