add camera support

--- a/experiment/remote/templates/base/index.html
+++ b/experiment/remote/templates/base/index.html
@@ -10,6 +10,7 @@
 <body>
   <h1>Experiment Controller</h1>
   <img src="/screen" width="640">
+  <img src="/camera" width="640">
   <h2>Controls</h2>
   <button onclick="sendCommand({'do': 'reward'})">Good Monkey!</button>
   <button onclick="sendCommand({'do': 'quit'})">Stop Task</button>
